c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/union_decl_empty_member_list.c
// union member list cannot be empty
// (note that GCC/Clang allow this as an extenision)
union s {};

int main(void) {
    return 0;
}